--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  shared_preferences: ^2.0.10
+
   flutter_image_slider: any
   http: ^0.13.4
   flutter_bloc: 8.0.0
@@ -55,6 +55,9 @@ dependencies:
   # carousel_slider: ^4.0.0
   lottie: ^1.3.0
   carousel_slider: ^4.1.1
+  device_info_plus: ^3.2.4
+  fluttertoast: ^8.0.9
+  shared_preferences: ^2.0.15
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -78,48 +81,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/amber logo final-01.jpg
-    - assets/AmberIcon.ico
-    - assets/image1.jpg
-    - assets/image2.jpg
-    - assets/image3.png
-    - assets/quotationIcon.png
-    - assets/purchaseIcon.png
-    - assets/salesorderIcon.png
-    - assets/videohome.png
-    - assets/erpsoftware.jfif
-    - assets/vediotutorial.jpg
-    - assets/vediogrid.json
-    - assets/promovideio.json
-    - assets/thumbnail1.jpg
-    - assets/thumbnail2.png
-    - assets/AMBER.ico
-    - assets/supportImage.jpg
-    - assets/notificationImage.jfif
-    - assets/newversionImage.jpg
-    - assets/auditImage.jpg
-    - assets/backupImage.jpg
-    - assets/cleanupImage.jfif
-    - assets/EinvoiceImage.jpg
-    - assets/Asharaf.jpg
-    - assets/userImage.jpg
-    - assets/firoseImage.jpeg
-    - assets/AnjithaImage.jpeg
-    - assets/NabeelImage.jpeg
-    - assets/officeImage.jfif
-    - assets/shopImage.png
-    - assets/customericon.jpg
-    - assets/suppliericon.png
-    - assets/CashIcon.png
-    - assets/CardIcon.png
-    - assets/CreditIcon.jpg
-    - assets/UserIcon.png
-    - assets/ExcessIcon.jpg
-    - assets/ShortIcon.jpg
-    - assets/cashOutIcon.jpg
-    - assets/cashInIcon.png
-    - assets/voucherMoney.png
-    - assets/salesAmount.png
+    - assets/
 #     - assets/image1.jpg
 #     - assets/image2.jpg
 #     - assets/image3.png
