--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,10 +58,19 @@ dependencies:
   device_info_plus: ^3.2.4
   fluttertoast: ^8.0.9
   shared_preferences: ^2.0.15
+  auto_size_text: ^3.0.0
+  provider: ^6.0.3
+  internet_connection_checker: ^0.0.1+4
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.9.0"
 
+flutter_icons:
+  image_path: "assets/AMBER.ico"
+  android: true
+  ios: true
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
